[package]
name = "bevy_table_uix"
version = "0.1.0"
edition = "2021"

[dependencies]
conf_lang = {path = "../conf_lang"}
script_lang = {path = "../script_lang"}
bevy_table_ui = {path = "../bevy_table_ui"}

bevy = { version = "0.15.0", default-features = false, features = [] }

thiserror = "1.0.62"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bevy_axis_input = {path = "../bevy_axis_input"}

[[example]]
name = "test"
path = "examples/test.rs"
