[package]
name = "bevy_table_uix"
version = "0.1.0"
edition = "2021"

[dependencies]
conf_lang = {path = "../conf_lang"}
script_lang = {path = "../script_lang"}
bevy_table_ui = {path = "../bevy_table_ui"}

bevy = { version = "0.17", default-features = false, features = [
    #"bevy_asset",

] }

thiserror = "1.0"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
#bevy = { version = "0.16", default-features = false, features = [ "bevy_window","x11", "multi_threaded", "file_watcher", ] } #"dynamic_linking",
bevy = { version = "0.17", default-features = true, features = [ "serialize","file_watcher",] } 

[[example]]
name = "test"
path = "examples/test.rs"
