[package]
name = "bevy_table_uix"
version = "0.1.0"
edition = "2021"

[dependencies]
conf_lang = {path = "../conf_lang"}
script_lang = {path = "../script_lang"}
bevy_table_ui = {path = "../bevy_table_ui"}

bevy = { version = "0.18", default-features = false, features = [
    #"bevy_asset",
]}

thiserror = "1.0"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "serialize","file_watcher","multi_threaded",
    "bevy_winit",
    "png",
    "debug","trace",
    "dynamic_linking",
]}

[[example]]
name = "test"
path = "examples/test.rs"
